# codeRipper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  request.json  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  health.py  intelligence.py  jobs.py  repos.py  tutor.py
app/core/: __init__.py  chunking.py  errors.py  git.py  llm.py  security.py  vector_store.py
app/middleware/: __init__.py  auth.py  correlation.py  logging.py  rate_limit.py
app/models/: __init__.py  api_key.py  code_chunk.py  job.py  repository.py  tutor_session.py
app/schemas/: __init__.py  intelligence.py  job.py  repository.py  tutor.py
app/services/: __init__.py  documentation.py  indexing.py  ingestion.py  jobs.py  lifecycle.py  search.py  tutor.py
app/worker/: __init__.py  runner.py
docs/: frontend_srs.md
migrations/: env.py
migrations/versions/: 20240129_0001_001_initial_schema.py
scripts/: verify_pipeline.py
